Create base image for answerhub

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,4 +23,5 @@ services:
   answerhub:
     build:
       context: .
-    image: centos:7-ah
+      dockerfile: centos/7/answerhub/Dockerfile
+    image: centos:7-answerhub
