--- a/centos/7/tomcat/Dockerfile
+++ b/centos/7/tomcat/Dockerfile
@@ -5,6 +5,7 @@ ARG MYSQL_CONN_URL=https://cdn.mysql.com//Downloads/Connector-J/${MYSQL_CONN_RPM
 ARG MYSQL_CONN_PATH=/tmp/${MYSQL_CONN_RPM}
 ARG MYSQL_PUBKEY=5072E1F5
 
+ENV JAVA_ABRT=off
 ENV TOMCATS_BASE=/var/lib/tomcats/
 ENV JAVA_HOME=/usr/lib/jvm/jre
 ENV CATALINA_HOME=/usr/share/tomcat
@@ -14,19 +15,13 @@ ENV JNI_LIBDIR=/usr/lib/java
 ENV JVM_ROOT=/usr/lib/jvm
 ENV CATALINA_BASE $CATALINA_HOME
 ENV JAVACMD ${JAVA_HOME}/bin/java
-ENV CLASSPATH ${CLASSPATH}${CLASSPATH:+:}${CATALINA_HOME}/bin/bootstrap.jar:${CATALINA_HOME}/bin/tomcat-juli.jar:${JAVA_LIBDIR}/commons-daemon.jar
 ENV LOGGING_PROPERTIES ${CATALINA_BASE}/conf/logging.properties
-
-ENV MAIN_CLASS=org.apache.catalina.startup.Bootstrap
-ENV OPTIONS -Dcatalina.base=${CATALINA_BASE} -Dcatalina.home=${CATALINA_HOME} \
-    -Djava.endorsed.dirs=${JAVA_ENDORSED_DIRS} -Djava.io.tmpdir=${CATALINA_TMPDIR} \
-    -Djava.util.logging.config.file=${LOGGING_PROPERTIES} \
-    -Djava.util.logging.manager=org.apache.juli.ClassLoaderLogManager
 
 RUN yum -y install \
         tomcat \
         tomcat-lib \
         apache-commons-daemon \
+        javapackages-tools \
     && yum clean all && rm -rf /var/cache/yum
 
 RUN set -e; \
@@ -38,8 +33,12 @@ RUN set -e; \
     rm -f ${MYSQL_CONN_PATH}; \
     rm -rf /root/.gnupg
 
+# switch from eval() call to exec() inside run() function
+COPY centos/system/usr/libexec/tomcat/functions /usr/libexec/tomcat/functions
+
 RUN mkdir -p $CATALINA_BASE/webapps
+RUN mkdir -p /etc/tomcat/conf.d
 
 USER tomcat
 WORKDIR $CATALINA_HOME
-CMD "${JAVACMD}" ${JAVA_OPTS} ${CATALINA_OPTS} -classpath "${CLASSPATH}" ${OPTIONS} "${MAIN_CLASS}" start
+CMD /usr/libexec/tomcat/server start
