--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,9 @@ services:
     build:
       context: .
     image: centos:7-answerhub-env
+    ports:
+      - "8080:8080"
     env_file:
       - secrets/test.env
     environment:
-      CATALINA_OPTS: -Ddatabase.url=172.17.3.15 -Ddatabase.name=answerhub -Ddatabase.user=answerhub
+      CATALINA_OPTS: -Ddatabase.url=172.17.0.1 -Ddatabase.name=answerhub -Ddatabase.user=answerhub
