--- a/centos/7/scm/Dockerfile
+++ b/centos/7/scm/Dockerfile
@@ -4,5 +4,6 @@ RUN yum -y install \
 		bzr \
 		git \
 		mercurial \
+		openssh-clients \
 		subversion \
 	&& yum clean all && rm -rf /var/cache/yum
