set APP_WAR as environment variable; added group tomcat into chown

--- a/centos/7/answerhub/Dockerfile
+++ b/centos/7/answerhub/Dockerfile
@@ -3,7 +3,7 @@ FROM centos:7-tomcat
 ARG APP_NAME=answerhub
 ARG APP_VERSION=1.6.6
 ENV APP_ROOT=/var/www/answerhub
-ARG APP_WAR=$APP_ROOT/teamhub.war
+ENV APP_WAR=$APP_ROOT/teamhub.war
 
 USER root
 
@@ -11,12 +11,11 @@ COPY centos/system/etc/tomcat/conf.d/answerhub.conf /etc/tomcat/conf.d/answerhub
 
 # create default context
 RUN mkdir -p $APP_ROOT \
-    && chown -R tomcat $APP_ROOT \
     && ln -s ${APP_WAR} $CATALINA_BASE/webapps/ROOT
 
 COPY ${APP_NAME}-${APP_VERSION} ${APP_ROOT}
 
-RUN chown -R tomcat ${APP_ROOT}
+RUN chown -R tomcat:tomcat ${APP_ROOT}
 
 USER tomcat
 WORKDIR $CATALINA_HOME
