Moved database.password into secrets .env file to avoid its presence in command line

--- a/centos/system/etc/tomcat/conf.d/answerhub-mysql.conf
+++ b/centos/system/etc/tomcat/conf.d/answerhub-mysql.conf
@@ -1,1 +1,1 @@
-CATALINA_OPTS="${CATALINA_OPTS} -Ddatabase.engine=mysql -Ddatabase.password=${DATABASE_SECRET}"
+CATALINA_OPTS="${CATALINA_OPTS} -Ddatabase.engine=mysql"
