Added property teamhub.forceSetup=false according to installation instructions:
http://docs.dzonesoftware.com/articles/13569/install-and-configure-mysql-database-support-2.html

--- a/centos/system/etc/tomcat/conf.d/answerhub.conf
+++ b/centos/system/etc/tomcat/conf.d/answerhub.conf
@@ -1,2 +1,2 @@
 JAVA_OPTS="-Xmx1300M -Xms784M -XX:MaxPermSize=512m"
-CATALINA_OPTS="${CATALINA_OPTS} -Dteamhub.home=/var/www/answerhub/teamhub.home"
+CATALINA_OPTS="${CATALINA_OPTS} -Dteamhub.home=/var/www/answerhub/teamhub.home -Dteamhub.forceSetup=false"
