--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,8 @@ services:
   answerhub:
     build:
       context: base
+      args:
+       APP_VERSION: 1.6.6
     image: answerhub:base
   answerhub-test:
     build:
