--- a/centos/7/tomcat/Dockerfile.myconn-8
+++ b/centos/7/tomcat/Dockerfile.myconn-8
@@ -1,6 +1,7 @@
 FROM centos:7-jdk-8
 
-ARG MYSQL_CONN_RPM=mysql-connector-java-8.0.11-1.el7.noarch.rpm
+ARG MYSQL_CONN_NAME=mysql-connector-java-8.0.11
+ARG MYSQL_CONN_RPM=${MYSQL_CONN_NAME}-1.el7.noarch.rpm
 ARG MYSQL_CONN_URL=https://cdn.mysql.com//Downloads/Connector-J/${MYSQL_CONN_RPM}
 ARG MYSQL_CONN_PATH=/tmp/${MYSQL_CONN_RPM}
 ARG MYSQL_PUBKEY=5072E1F5
@@ -16,6 +17,7 @@ ENV JVM_ROOT=/usr/lib/jvm
 ENV CATALINA_BASE $CATALINA_HOME
 ENV JAVACMD ${JAVA_HOME}/bin/java
 ENV LOGGING_PROPERTIES ${CATALINA_BASE}/conf/logging.properties
+ENV CLASSPATH=/usr/share/java/${MYSQL_CONN_NAME}.jar
 
 RUN yum -y install \
         apache-commons-daemon \
