Added plugins installation

--- a/custom/Dockerfile
+++ b/custom/Dockerfile
@@ -10,11 +10,15 @@ RUN echo -n > $APP_CONFIG_PROPERTIES
 
 # license installation
 COPY update/sites $APP_ROOT/teamhub.home/sites
-RUN chown -R tomcat:tomcat $APP_ROOT/teamhub.home/sites
 
 # custom themes installation
 COPY update/themes $APP_ROOT/teamhub.home/themes
-RUN chown -R tomcat:tomcat $APP_ROOT/teamhub.home/themes
+
+# additional plugins installation
+COPY update/plugins $APP_ROOT/teamhub.home/plugins
+RUN chown -R tomcat:tomcat $APP_ROOT/teamhub.home/themes \
+    $APP_ROOT/teamhub.home/sites \
+    $APP_ROOT/teamhub.home/plugins
 
 VOLUME $APP_ROOT/teamhub.home/sites
 
