Added dependency on base service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       - sites:/var/www/answerhub/teamhub.home/sites
     build:
       context: custom
+    depends_on:
+      - answerhub
     image: answerhub:custom
     network_mode: "host"
     env_file:
