rollback last commit

--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -3,8 +3,8 @@ FROM aursu/centos:tomcat
 ARG APP_NAME=answerhub
 ARG APP_VERSION=1.6.6
 ENV APP_ROOT=/var/www/answerhub
-ENV APP_WAR=/var/www/answerhub/teamhub.war
-ENV APP_CONFIG_PROPERTIES=/var/www/answerhub/teamhub.war/WEB-INF/classes/META-INF/config.properties
+ENV APP_WAR=$APP_ROOT/teamhub.war
+ENV APP_CONFIG_PROPERTIES=${APP_WAR}/WEB-INF/classes/META-INF/config.properties
 
 USER root
 
@@ -15,11 +15,11 @@ USER root
 COPY system/etc/tomcat/conf.d/answerhub.conf /etc/tomcat/conf.d/answerhub.conf
 
 # create default Context
-RUN mkdir -p /var/www/answerhub \
-    && ln -s /var/www/answerhub/teamhub.war $CATALINA_BASE/webapps/ROOT
+RUN mkdir -p $APP_ROOT \
+    && ln -s ${APP_WAR} $CATALINA_BASE/webapps/ROOT
 
-COPY answerhub-${APP_VERSION} /var/www/answerhub
-RUN chown -R tomcat:tomcat /var/www/answerhub
+COPY ${APP_NAME}-${APP_VERSION} ${APP_ROOT}
+RUN chown -R tomcat:tomcat ${APP_ROOT}
 
 USER tomcat
 WORKDIR $CATALINA_HOME
