--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,18 @@
 version: "3"
 services:
-  answerhub:
-    build:
-      context: base
-      args:
-       APP_VERSION: 1.6.6
-    image: answerhub:base
   answerhub-test:
     volumes:
       - sites:/var/www/answerhub/teamhub.home/sites
-    build:
-      context: custom
-    image: answerhub:custom
-    network_mode: "host"
+      - search:/var/lib/answerhub/search_index
+    image: registry.company.tld/answerhub:1.6.6-custom-2
+    ports:
+      - 8080:8080
+    restart: always
     env_file:
       - secrets/test.env
     environment:
-      CATALINA_OPTS: -Ddatabase.url=127.0.0.1 -Ddatabase.name=answerhub -Ddatabase.user=answerhub
+      CATALINA_OPTS: -Ddatabase.url=192.168.1.1 -Ddatabase.name=answerhub -Ddatabase.user=answerhub
 
 volumes:
   sites:
+  search:
