--- a/custom/Dockerfile
+++ b/custom/Dockerfile
@@ -1,4 +1,4 @@
-FROM answerhub:base
+FROM registry.company.tld/answerhub:1.6.6-base-2
 
 USER root
 
@@ -16,11 +16,14 @@ COPY update/themes $APP_ROOT/teamhub.home/themes
 
 # additional plugins installation
 COPY update/plugins $APP_ROOT/teamhub.home/plugins
-RUN chown -R tomcat:tomcat $APP_ROOT/teamhub.home/themes \
-    $APP_ROOT/teamhub.home/sites \
-    $APP_ROOT/teamhub.home/plugins
 
-VOLUME $APP_ROOT/teamhub.home/sites
+RUN mkdir -p /var/lib/answerhub/search_index \
+    && chown -R tomcat:tomcat $APP_ROOT/teamhub.home/themes \
+    $APP_ROOT/teamhub.home/sites \
+    $APP_ROOT/teamhub.home/plugins \
+    /var/lib/answerhub/search_index
+
+VOLUME $APP_ROOT/teamhub.home/sites /var/lib/answerhub/search_index
 
 USER tomcat
 WORKDIR $CATALINA_HOME
